Quick fix to make Netbeans 12.4+ run Glassfish 6.x also on any 11+ JDK version. Should instead differentiate between 6.0 and 6.1+, and see where it's more correct to put the --add-opens paramters in StartTask.java.